fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,20 @@
   margin: 0;
   padding: 0;
 }
-#root {
-  height: 100%;
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-  min-height: 100vh;
-  height: 100%;
+  line-height: 1.5;
+  font-size: 0.875rem;
+  transition: all 0.3s linear;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -58,6 +64,25 @@ body {
 .btn-block {
   display: block;
   width: 100%;
+}
+
+/*=============== 
+Navbar
+===============
+*/
+.nav-center {
+  width: 90vw;
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+}
+.nav-center h1 {
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  letter-spacing: 2px;
 }
 
 .task {
@@ -121,14 +146,13 @@ footer {
 .dark-mode {
   background-color: #1a1919;
   color: #999;
-  height: 100%;
+
   transition: background-color 0.25s ease-in-out;
 }
 
 .light-mode {
   background-color: #fff;
   color: #333;
-  height: 100%;
   transition: background-color 0.25s ease-in-out;
 }
 span {
